fix: [PIE-1164]: Fix Alignment issues in Service, env and Error message labels

--- a/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionGraphView/ExecutionStageDetailsHeader/ExecutionStageDetailsHeader.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionGraphView/ExecutionStageDetailsHeader/ExecutionStageDetailsHeader.module.scss
@@ -84,7 +84,7 @@
 
   .errorMsg {
     padding: var(--spacing-5);
-    height: 100%;
+    max-height: 100%;
 
     p {
       font-size: var(--font-size-xsmall);
